--- a/popup.html
+++ b/popup.html
@@ -5,16 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TimeUp</title>
-    <link rel="stylesheet" href="popup.css"
+    <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-    <h1>Title</h1>
-    <h2 id="time"></h2>
-    <h2 id="name"></h2>
-    <h2 id="timer"></h2>
-    <button id="start">Start time</button>
-    <button id="stop">Stop time</button>
-    <button id="reset">Reset time</button>
+    <h1>TimeUp</h1>
+    <ul id="sites"></ul>
 </body>
 <script src="popup.js"></script>
 </html>
